--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 class="img-responsive"
               />
             </p>
-            <h1 id="what-is-spartacus">What is Spartacus? 🐶</h1>
+            <h1 id="what-is-spartacus">What is Spartacus? 🐮🐔</h1>
             <p>
               Spartacus is a lean, Angular-based JavaScript storefront for SAP
               Commerce Cloud. Spartacus talks to SAP Commerce Cloud exclusively
