--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                    <div class="content-data">
 
 <p><img src="docs/assets/spartacus-blue.png" alt="JavaScript storefront (spartacus)" class="img-responsive"></p>
-<h1 id="what-is-spartacus">What is Spartacus?</h1>
+<h1 id="what-is-spartacus">What is Spartacus? 🚀</h1>
 <p>Spartacus is a lean, Angular-based JavaScript storefront for SAP Commerce Cloud. Spartacus talks to SAP Commerce Cloud exclusively through the Commerce REST API.</p>
 <ul>
 <li>Documentation is hosted on our dedicated <a href="https://sap.github.io/cloud-commerce-spartacus-storefront-docs/">Spartacus Documentation site</a>.</li>
